# Mophidian

./: .gitignore  README.md  Todo.md  makefile  pyproject.toml  ref.md  requirements.txt  requirments.txt  serve.py  setup.py  testing.py
.github/workflows/: static.yml
app/public/: highlight.css
m-ophidian/: __main__.py  parse.py
m-ophidian/compiler/: setup.py
markdocssg/python/: package.json  parser.py  pymarkssg.toml  test.html
markdocssg/web/: Todo.html  sample.html  style.min.css.map
mophidian/: __init__.py  __main__.py  compile_steps.py  compiler.py  config.json  config.py  core.py  integration.py  moph.json  package.json  parse.py  ppm.py  pygmentize.py  sample.html  sample.md  style.css  todo.md  util.py  v3_todo.md
mophidian/FileSystem/: __init__.py  markdown_extensions.py  nodes.py  util.py
mophidian/Server/: __init__.py  server.py  watchdog.py
mophidian/cli/: styles.py
mophidian/commands/: __init__.py
mophidian/compile/: __init__.py  compiler.py  serve.py
mophidian/compiler/: __init__.py  build.py  moph_base.html  pages.py  setup.py
mophidian/config/: config.py
mophidian/core/: __init__.py  build.py  builder.py  context.py  files.py  integration.py  navigation.py  pages.py  ppm.py  serve.py  snippets.py  toc.py  util.py  utils.py
mophidian/file_system/: __init__.py  base.py  containers.py  files.py  markdown_extensions.py
mophidian/fs/: __init__.py  core.py  exceptions.py  file_system.py  toc.py
mophidian/liveserver/: observe.py  serve.py
mophidian/moph_log/: __init__.py  log.py
mophidian/moph_logger/: __init__.py  log.py
mophidian/new/: __init__.py  new.py  snippets.py
mophidian/old/: __init__.py  __main__.py  compile_steps.py
mophidian/plugins/: __init__.py  pdoc.py
mophidian/preset/: feed.xml  moph.yml
mophidian/presets/: sitemap.xml  sitemapindex.xml
mophidian/server/: __init__.py  observe.py
mophidian/templates/: moph_base.html
old_code/core/: config.py  toc.py
playground/: test.py
playground/example/: moph.json
playground/mophidian/: moph.json  package.json  tailwind.config.js
playground/new/: __main__.py  main.py  moph.yml
playground/py_exec/: globals.py
playground/python/: Todo.html  Todo.md  package.json  parser.md  parser.py  sample.html  sample.md  style.css  style.css.map  style.scss  test.html  text.html
playground/tailwind/: moph.json  package.json  tailwind.config.js
playground/test/: moph.yml  test.py
playground/test_blank/: moph.json
playground/v1/: WebObjects.py  constants.py  package.json  parser.py  style.scss
playground/v2/: moph.json  package.json  tailwind.config.js
playground/v3/: brainstorm.md  config.json  config.py
playground/web/: index.html
playground/website/: docs.md
v1/: __main__.py
v1/liveserver/: __init__.py
v1/moph_logger/: __init__.py  color.py
v2/: __main__.py  moph.json
v2/core/: files.py  integration.py  navigation.py  pages.py  utils.py
v2/moph_log/: LL.py
v2/server/: serve.py
website/: base.txt  convert.py  moph.json  moph.yaml  moph.yml  package.json  tailwind.config.js
website/components/: favicon.html  footer.html  header.html  next_prev.html
website/layouts/: base.html  blog.html  docs.html
website/pages/: home.scss  index.html
website/public/: global.css
website/site/: home.css  index.html
website/styles/: _footer.scss  _header.scss  _nav.scss  global.scss  tailwind.css
website/toc/: temp.html  temp_doc.html
(+379 files in other folders)
