[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mophidian"
version = "0.1.0"
description = "Static websites with python"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "saimll>=0.5.0",
    "tcfg>=0.4.0"
]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/Mophidian"
"Website" = "https://tired-fox.github.io/Mophidian/"

[project.scripts]
moph = "mophidian.__main__:cli"

# [project.entry-points.""]

[tool.black]
line-length = 100
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true