[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mophidian"
version = "0.2.3"
description = "Static websites with python"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    # External in house
    "phml>=0.2.1",
    "tcfg>=0.4.3",
    "watchserver>=0.1.9",
    "saimll>=0.5.0",

    # Third party
    "click",
    "python-frontmatter",
    "markdown",
    "pymdown-extensions",
    "Pygments",
]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/Mophidian"
"Website" = "https://tired-fox.github.io/Mophidian/"

[project.scripts]
moph = "mophidian.__main__:cli"

[tool.ruff]
selected = [
    'E',
    'F',
    'W',
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "A",
    "B",
    "COM",
    "C4",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "PTH",
    "PLE",
    "RUF"
]
