[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mophidian"
version = "0.2.4"
description = "Static websites generated with python"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    # First Party - by Tired-Fox
    "phml>=0.3.1",
    "tcfg[yaml]>=0.4.6",
    "watchserver>=0.1.9",
    "conterm>=0.0.1",

    # Third party
    "click",
    "python-frontmatter",
    "markdown",
    "pymdown-extensions",
    "Pygments",
]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/Mophidian"
"Website" = "https://tired-fox.github.io/Mophidian/"

[project.scripts]
moph = "mophidian.__main__:cli"

[tool.ruff]
selected = [
    'E',
    'F',
    'W',
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "A",
    "B",
    "COM",
    "C4",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "PTH",
    "PLE",
    "RUF"
]
